apps/whoami/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
  labels:
    or2.stumason.dev/app: "true"
